# fsfe-website

./: .cvsignore  .drone.yml  .gitignore  .htaccess  .php-cs-fixer.dist.php  .prettierignore  .symlinks  ChangeLog  Dockerfile  Documents  Make_local_menus  Makefile  Makefile.PL  Makefile.xsltproc  README.md  README.texi  TESTDOCUMENT.txt  TESTDOCUMENT1.txt  TESTDOCUMENT1.txt~  TODO  asdftest.txt  background.cs.xhtml  background.de.xhtml  background.fr.xhtml  background.it.xhtml  background.pt.xhtml  background.xhtml  background.xml  blue-new.css  blue-new.test.css  blue.css  boilerplate.cs.html  boilerplate.cs.xhtml  boilerplate.de.xhtml  boilerplate.en.xhtml  boilerplate.es.xhtml  boilerplate.fr.xhtml  boilerplate.hu.xhtml  boilerplate.it.xhtml  boilerplate.pt.xhtml  (+145 more)
.well-known/: atproto-did  security.txt
Annual Report/: Annual Report_01  Annual Report_02  Annual Report_03  annualreport_01.xhtml  annualreport_03.xhtml  annualreport_04.xhtml  annualreport_05.xhtml
CVS.adm/: MstData.stp  UsgData.stp  prjprm.stp
about/: .cvsignore  .directory  .htaccess  .symlinks  Constitution.de.html  Constitution.de.ps  Constitution.de.tex  Constitution.en.html  Constitution.en.ps  Constitution.en.tex  about-test.en.xhtml  about.ar.xhtml  about.bg.xhtml  about.bs.xhtml  about.ca.xhtml  about.cs.xhtml  about.da.xhtml  about.de.xhtml  about.el.xhtml  about.en.xhtml  about.es.xhtml  about.et.xhtml  about.fi.xhtml  about.fr.xhtml  about.hr.xhtml  about.hu.xhtml  about.it.xhtml  about.ku.xhtml  about.nb.xhtml  about.nl.xhtml  about.nn.xhtml  about.no.xhtml  about.pl.xhtml  about.pt.xhtml  about.ro.xhtml  about.ru.xhtml  about.sk.xhtml  about.sq.xhtml  about.sr.xhtml  about.sv.xhtml  (+152 more)
activities/: activities.cs.xhtml  activities.da.xhtml  activities.de.xhtml  activities.el.xhtml  activities.en.xhtml  activities.es.xhtml  activities.fi.xhtml  activities.fr.xhtml  activities.it.xhtml  activities.nl.xhtml  activities.pt.xhtml  activities.ru.xhtml  activities.tr.xhtml  activities.xsl  awareness.en.xhtml  awareness.es.xhtml  awareness.it.xhtml  awareness.nl.xhtml  default.xsl  finished.da.xhtml  finished.de.xhtml  finished.el.xhtml  finished.en.xhtml  finished.fr.xhtml  finished.it.xhtml  finished.nb.xhtml  finished.nl.xhtml  finished.ru.xhtml  finished.sq.xhtml  finished.xsl  inactive.it.xhtml  inactive.nb.xhtml  inactive.ru.xhtml  legal.en.xhtml  legal.it.xhtml  legal.nl.xhtml  legal.tr.xhtml  policy.en.xhtml  policy.it.xhtml  policy.nl.xhtml  (+13 more)
associates/: about.ca.xhtml  about.da.xhtml  about.de.xhtml  about.el.xhtml  about.en.xhtml  about.fr.xhtml  about.hu.xhtml  about.it.xhtml  about.nl.xhtml  about.ru.xhtml  about.sq.xhtml  about.sr.xhtml  associates.bs.xhtml  associates.ca.xhtml  associates.da.xhtml  associates.de.xhtml  associates.el.xhtml  associates.en.xhtml  associates.es.xhtml  associates.fi.xhtml  associates.fr.xhtml  associates.hu.xhtml  associates.it.xhtml  associates.nb.xhtml  associates.nl.xhtml  associates.no.xhtml  associates.pt.xhtml  associates.ro.xhtml  associates.ru.xhtml  associates.sources  associates.sq.xhtml  associates.sv.xhtml  associates.tr.xhtml  associates.xsl
at/: at.de.xhtml  at.el.xhtml  at.en.xhtml  at.sources  at.xsl
campaigns/: .htaccess  campaigns.cs.xhtml  campaigns.da.xhtml  campaigns.de.xhtml  campaigns.el.xhtml  campaigns.en.xhtml  campaigns.es.xhtml  campaigns.fi.xhtml  campaigns.fr.xhtml  campaigns.it.xhtml  campaigns.nl.xhtml  campaigns.pt.xhtml  campaigns.ru.xhtml  campaigns.sk.xhtml  campaigns.sq.xhtml  campaigns.tr.xhtml  finished.da.xhtml  finished.de.xhtml  finished.el.xhtml  finished.en.xhtml  finished.fr.xhtml  finished.it.xhtml  finished.nb.xhtml  finished.nl.xhtml  finished.ru.xhtml  finished.sq.xhtml  finished.xsl  inactive.da.xhtml  inactive.de.xhtml  inactive.el.xhtml  inactive.en.xhtml  inactive.fr.xhtml  inactive.it.xhtml  inactive.nb.xhtml  inactive.nl.xhtml  inactive.ru.xhtml  inactive.sources  inactive.sq.xhtml  inactive.xsl  projects.da.xhtml  (+13 more)
cgi-bin/: SpammerChk.pl  businesscards.pl  clt-bus.pl  clt-hotel.en.xml  clt-hotel.pl  contact.en.xml  contact.pl  contact2.pl  coposys  donate-new.pl  donate.pl  event-registration.pl  expense-request.pl  mail-signup.php  nfsa-nominate.pl  nph-redirect.cgi  odtfill  order-payonline.pl  order.pl  orderpromo.pl  pdfcontest.pl  pdfpetition.pl  perdiem.php  promotion.php  registerevent.php  reimbursement.php  search.cgi  share-config.php  share-gnusocial.php  share.php  stacs-register-capacity.pl  stacs-register-workshop.pl  ticket.pl  weborder.pl
climate-strike/: README.md  index.html  style.css
com-pkg/: com-pkg-alt.el.xhtml  com-pkg-alt.en.xhtml  com-pkg-contact.en.xhtml  com-pkg-details.el.xhtml  com-pkg-details.en.xhtml  com-pkg.de.xhtml  com-pkg.el.xhtml  com-pkg.en.xhtml
community/: groups.en.html  groups.en.xhtml  index.en.xhtml
contact/: .symlinks  Makefile  community.da.xhtml  community.de.xhtml  community.el.xhtml  community.en.xhtml  community.es.xhtml  community.et.xhtml  community.fi.xhtml  community.fr.xhtml  community.it.xhtml  community.nl.xhtml  community.pt.xhtml  community.ru.xhtml  community.sq.xhtml  contact-thankyou.en.xhtml  contact.ca.xhtml  contact.cs.xhtml  contact.da.xhtml  contact.de.xhtml  contact.el.xhtml  contact.en.xhtml  contact.en.xml  contact.es.xhtml  contact.et.xhtml  contact.fi.xhtml  contact.fr.xhtml  contact.hr.xhtml  contact.hu.xhtml  contact.it.xhtml  contact.nb.xhtml  contact.nl.xhtml  contact.no.xhtml  contact.pt.xhtml  contact.ro.xhtml  contact.ru.xhtml  contact.sk.xhtml  contact.sources  contact.sq.xhtml  contact.sr.xhtml  (+53 more)
contribute/: .htaccess  .symlinks  banners.el.xhtml  banners.en.xhtml  banners.fr.xhtml  contribute-new.en.xhtml  contribute-test.en.xhtml  contribute.bg.xhtml  contribute.ca.xhtml  contribute.cs.xhtml  contribute.da.xhtml  contribute.de.xhtml  contribute.el.xhtml  contribute.en.xhtml  contribute.es.xhtml  contribute.et.xhtml  contribute.fi.xhtml  contribute.fr.xhtml  contribute.hr.xhtml  contribute.hu.xhtml  contribute.it.xhtml  contribute.nb.xhtml  contribute.nl.xhtml  contribute.nn.xhtml  contribute.no.xhtml  (+81 more)
de/: de.css  (+13 more)
(+36475 files in other folders)
